// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`no-semi.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
a
;::b.c

=====================================output=====================================
a
;::b.c

================================================================================
`;

exports[`no-semi.js - {"semi":false} format[acorn] 1`] = `
"Unexpected token (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |
Cause: Unexpected token (2:1)"
`;

exports[`no-semi.js - {"semi":false} format[espree] 1`] = `
"Unexpected token : (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |
Cause: Unexpected token :"
`;

exports[`no-semi.js - {"semi":false} format[meriyah] 1`] = `
"Unexpected token: ':' (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |
Cause: [2:1-2:2]: Unexpected token: ':'"
`;

exports[`no-semi.js - {"semi":false} format[oxc] 1`] = `
"Unexpected token (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |"
`;

exports[`no-semi.js - {"semi":false} format[yuku] 1`] = `
"Unexpected token ':' (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |"
`;

exports[`no-semi.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
a
;::b.c

=====================================output=====================================
a;
::b.c;

================================================================================
`;

exports[`no-semi.js format[acorn] 1`] = `
"Unexpected token (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |
Cause: Unexpected token (2:1)"
`;

exports[`no-semi.js format[espree] 1`] = `
"Unexpected token : (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |
Cause: Unexpected token :"
`;

exports[`no-semi.js format[meriyah] 1`] = `
"Unexpected token: ':' (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |
Cause: [2:1-2:2]: Unexpected token: ':'"
`;

exports[`no-semi.js format[oxc] 1`] = `
"Unexpected token (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |"
`;

exports[`no-semi.js format[yuku] 1`] = `
"Unexpected token ':' (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |"
`;
